; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/prism54/extr_isl_ioctl.c_prism54_add_mac.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/prism54/extr_isl_ioctl.c_prism54_add_mac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.iw_request_info = type { i32 }
%struct.sockaddr = type { i64, i32 }
%struct.TYPE_3__ = type { %struct.islpci_acl }
%struct.islpci_acl = type { i32, i32, i32 }
%struct.mac_entry = type { i32, i32 }

@ARPHRD_ETHER = common dso_local global i64 0, align 8
@EOPNOTSUPP = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@ETH_ALEN = common dso_local global i32 0, align 4
@ERESTARTSYS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.iw_request_info*, %struct.sockaddr*, i8*)* @prism54_add_mac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prism54_add_mac(%struct.net_device* %0, %struct.iw_request_info* %1, %struct.sockaddr* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.net_device*, align 8
  %7 = alloca %struct.iw_request_info*, align 8
  %8 = alloca %struct.sockaddr*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_3__*, align 8
  %11 = alloca %struct.islpci_acl*, align 8
  %12 = alloca %struct.mac_entry*, align 8
  %13 = alloca %struct.sockaddr*, align 8
  store %struct.net_device* %0, %struct.net_device** %6, align 8
  store %struct.iw_request_info* %1, %struct.iw_request_info** %7, align 8
  store %struct.sockaddr* %2, %struct.sockaddr** %8, align 8
  store i8* %3, i8** %9, align 8
  %14 = load %struct.net_device*, %struct.net_device** %6, align 8
  %15 = call %struct.TYPE_3__* @netdev_priv(%struct.net_device* %14)
  store %struct.TYPE_3__* %15, %struct.TYPE_3__** %10, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  store %struct.islpci_acl* %17, %struct.islpci_acl** %11, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = bitcast i8* %18 to %struct.sockaddr*
  store %struct.sockaddr* %19, %struct.sockaddr** %13, align 8
  %20 = load %struct.sockaddr*, %struct.sockaddr** %13, align 8
  %21 = getelementptr inbounds %struct.sockaddr, %struct.sockaddr* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @ARPHRD_ETHER, align 8
  %24 = icmp ne i64 %22, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %4
  %26 = load i32, i32* @EOPNOTSUPP, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %5, align 4
  br label %67

28:                                               ; preds = %4
  %29 = load i32, i32* @GFP_KERNEL, align 4
  %30 = call %struct.mac_entry* @kmalloc(i32 8, i32 %29)
  store %struct.mac_entry* %30, %struct.mac_entry** %12, align 8
  %31 = load %struct.mac_entry*, %struct.mac_entry** %12, align 8
  %32 = icmp eq %struct.mac_entry* %31, null
  br i1 %32, label %33, label %36

33:                                               ; preds = %28
  %34 = load i32, i32* @ENOMEM, align 4
  %35 = sub nsw i32 0, %34
  store i32 %35, i32* %5, align 4
  br label %67

36:                                               ; preds = %28
  %37 = load %struct.mac_entry*, %struct.mac_entry** %12, align 8
  %38 = getelementptr inbounds %struct.mac_entry, %struct.mac_entry* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.sockaddr*, %struct.sockaddr** %13, align 8
  %41 = getelementptr inbounds %struct.sockaddr, %struct.sockaddr* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 8
  %43 = load i32, i32* @ETH_ALEN, align 4
  %44 = call i32 @memcpy(i32 %39, i32 %42, i32 %43)
  %45 = load %struct.islpci_acl*, %struct.islpci_acl** %11, align 8
  %46 = getelementptr inbounds %struct.islpci_acl, %struct.islpci_acl* %45, i32 0, i32 0
  %47 = call i64 @mutex_lock_interruptible(i32* %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %54

49:                                               ; preds = %36
  %50 = load %struct.mac_entry*, %struct.mac_entry** %12, align 8
  %51 = call i32 @kfree(%struct.mac_entry* %50)
  %52 = load i32, i32* @ERESTARTSYS, align 4
  %53 = sub nsw i32 0, %52
  store i32 %53, i32* %5, align 4
  br label %67

54:                                               ; preds = %36
  %55 = load %struct.mac_entry*, %struct.mac_entry** %12, align 8
  %56 = getelementptr inbounds %struct.mac_entry, %struct.mac_entry* %55, i32 0, i32 0
  %57 = load %struct.islpci_acl*, %struct.islpci_acl** %11, align 8
  %58 = getelementptr inbounds %struct.islpci_acl, %struct.islpci_acl* %57, i32 0, i32 2
  %59 = call i32 @list_add_tail(i32* %56, i32* %58)
  %60 = load %struct.islpci_acl*, %struct.islpci_acl** %11, align 8
  %61 = getelementptr inbounds %struct.islpci_acl, %struct.islpci_acl* %60, i32 0, i32 1
  %62 = load i32, i32* %61, align 4
  %63 = add nsw i32 %62, 1
  store i32 %63, i32* %61, align 4
  %64 = load %struct.islpci_acl*, %struct.islpci_acl** %11, align 8
  %65 = getelementptr inbounds %struct.islpci_acl, %struct.islpci_acl* %64, i32 0, i32 0
  %66 = call i32 @mutex_unlock(i32* %65)
  store i32 0, i32* %5, align 4
  br label %67

67:                                               ; preds = %54, %49, %33, %25
  %68 = load i32, i32* %5, align 4
  ret i32 %68
}

declare dso_local %struct.TYPE_3__* @netdev_priv(%struct.net_device*) #1

declare dso_local %struct.mac_entry* @kmalloc(i32, i32) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1

declare dso_local i64 @mutex_lock_interruptible(i32*) #1

declare dso_local i32 @kfree(%struct.mac_entry*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
